feat: Add 3.6.9-2 release.
Former-commit-id: 11cda1d93c485e4fc0af1a2e8e654135c8e4608b